@@ -176,7 +176,6 @@ public:
 	void ShaftDoorsEnabledRange(int number, int floor, int range);
 	bool AreDoorsOpen(int number = 0);
 	bool AreShaftDoorsOpen(int number, int floor);
-	float GetCurrentDoorSpeed(int number = 0);
 	void ResetDoorTimer(int number = 0);
 	bool DoorsStopped(int number = 0);
 	Object* AddDoors(int number, const char *lefttexture, const char *righttexture, float thickness, float CenterX, float CenterZ, float width, float height, bool direction, float tw, float th);
